--- a/web/SignUp.xhtml
+++ b/web/SignUp.xhtml
@@ -22,8 +22,9 @@ Copyright © 2017 Osman Balci. All rights reserved.
 
         <!-- Create the content for this page below -->
         <ui:define name="editableContent">
-
-            <div align="center" style="width:50%; margin:0 auto;">
+            <div align="center"> <index_header>Create Account</index_header></div>
+            <br/>
+            <div align="center" style="width:40%; background-color: #FEFEFE; margin:0 auto;" >
 
                 <!-- Error messages will be shown here if any  -->
                 <p:messages id="msgs" showIcon="false"/>
@@ -31,104 +32,160 @@ Copyright © 2017 Osman Balci. All rights reserved.
 
                 <h:form id="AccountCreationForm">
 
-                    <div align="center"> <index_header>Create Account</index_header></div>
-                    <br></br>
-
-                    <!-- f:event allows ComponentSystemEventListener instances on a UI component in a JSF page. 
-                    The following f:event assigns an event listener with the UI component "form" - AccountCreationForm.
-                    
-                    type="postValidate" directs the listener event to invoke the accountManager.validateInformation method
-                    AFTER the UI component "form" is validated with the validation statements included below.
-                    -->
                     <f:event listener="#{accountManager.validateInformation}" type="postValidate"/>
 
-                    <p:panelGrid columns="2" columnClasses="columnOne, columnTwo" style="border: none">
+                    <table cellspacing="7" style="border-right-color: red; border-right-width: 200px;">
+                        <tr>
+                            <td><index_regular>First Name</index_regular></td>
+                            <td style="padding-left: 50px;" ><index_regular>Email</index_regular></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p:inputText id="firstName" value="#{accountManager.firstName}" required="true" styleClass="accountInputTextField"
+                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_firstName}" label="First Name">
+                                    <f:validateLength minimum="2" />
+                                </p:inputText>   
+                            </td>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="First Name" for="firstName" />
-                        <p:inputText id="firstName" value="#{accountManager.firstName}" required="true" styleClass="accountInputTextField"
-                                     requiredMessage="#{bundle.CreateCustomerRequiredMessage_firstName}" label="First Name">
-                            <f:validateLength minimum="2" />
-                        </p:inputText>   
+                            <td style="padding-left: 50px;">
+                                <p:inputText id="email" value="#{accountManager.email}" required="true" styleClass="accountInputTextField"
+                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_email}" label="Email">
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Middle Name" for="middleName" />
-                        <p:inputText id="middleName" value="#{accountManager.middleName}"
-                                     required="false" styleClass="accountInputTextField" label="Middle Name">
-                        </p:inputText>
+                                </p:inputText>
+                            </td>
+                        </tr>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Last Name" for="lastName" />
-                        <p:inputText id="lastName" value="#{accountManager.lastName}" required="true" styleClass="accountInputTextField"
-                                     requiredMessage="#{bundle.CreateCustomerRequiredMessage_lastName}" label="Last Name">
-                            <f:validateLength minimum="2" />
-                        </p:inputText>
+                        <tr>
+                            <td><index_regular>Middle Name</index_regular></td>
+                            <td style="padding-left: 50px;" ><index_regular>Username</index_regular></td>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Address Line 1" for="address1" />
-                        <p:inputText id="address1" value="#{accountManager.address1}" required="true" styleClass="accountInputTextField"
-                                     requiredMessage="#{bundle.CreateCustomerRequiredMessage_address1}" label="Address Line 1">
-                            <f:validateLength minimum="2" />
-                        </p:inputText>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Address Line 2" for="address2" />
-                        <p:inputText id="address2" value="#{accountManager.address2}" label="Address Line 2" styleClass="accountInputTextField">
-                        </p:inputText>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p:inputText id="middleName" value="#{accountManager.middleName}"
+                                             required="false" styleClass="accountInputTextField" label="Middle Name">
+                                </p:inputText> 
+                            </td>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="City" for="city" />
-                        <p:inputText id="city" value="#{accountManager.city}" required="true" styleClass="accountInputTextField"
-                                     requiredMessage="#{bundle.CreateCustomerRequiredMessage_city}" label="City">
-                            <f:validateLength minimum="2" />
-                        </p:inputText>
+                            <td style="padding-left: 50px;">
+                                <p:inputText id="username" value="#{accountManager.username}" required="true" styleClass="accountInputTextField"
+                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_username}" label="Username">
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="State" for="state" />
-                        <h:selectOneMenu id="state" value="#{accountManager.state}" required="true">
-                            <f:selectItems value="#{accountManager.listOfStates}" var="state"
-                                           itemLabel="#{state}" itemValue="#{state}" />
-                        </h:selectOneMenu>
+                                </p:inputText>
+                            </td>
+                        </tr>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Zip Code" for="zipcode" />
-                        <p:inputText id="zipcode" value="#{accountManager.zipcode}" required="true" styleClass="accountInputTextField"
-                                     requiredMessage="#{bundle.CreateCustomerRequiredMessage_zipcode}" label="Zip Code">
+                        <tr>
+                            <td><index_regular>Last Name</index_regular></td>
+                            <td style="padding-left: 50px;" ><index_regular>Password</index_regular></td>
 
-                        </p:inputText>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p:inputText id="lastName" value="#{accountManager.lastName}" required="true" styleClass="accountInputTextField"
+                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_lastName}" label="Last Name">
+                                    <f:validateLength minimum="2" />
+                                </p:inputText>
+                            </td>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Email" for="email" />
-                        <p:inputText id="email" value="#{accountManager.email}" required="true" styleClass="accountInputTextField"
-                                     requiredMessage="#{bundle.CreateCustomerRequiredMessage_email}" label="Email">
+                            <td style="padding-left: 50px;">
+                                <p:password id="password" value="#{accountManager.password}" feedback="true" required="true" styleClass="accountInputTextField">
+                                    <!-- Execute the "validate" method in the "PasswordValidator.java" class file to validate the password entered. -->
+                                </p:password>
+                            </td>
+                        </tr>
 
-                        </p:inputText>
+                        <tr>
+                            <td><index_regular>Address Line 1</index_regular></td>
+                            <td style="padding-left: 50px;" ><index_regular>Confirm Password</index_regular></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p:inputText id="address1" value="#{accountManager.address1}" required="true" styleClass="accountInputTextField"
+                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_address1}" label="Address Line 1">
+                                    <f:validateLength minimum="2" />
+                                </p:inputText> 
+                            </td>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Username" for="username" />
-                        <p:inputText id="username" value="#{accountManager.username}" required="true" styleClass="accountInputTextField"
-                                     requiredMessage="#{bundle.CreateCustomerRequiredMessage_username}" label="Username">
+                            <td style="padding-left: 50px;">
+                                <p:password id="confirmPassword" value="ToBeReadFromThisFieldByAccountManager" required="true" styleClass="accountInputTextField"/>
+                            </td>
+                        </tr>
 
-                        </p:inputText>
+                        <tr>
+                            <td><index_regular>Address Line 2</index_regular></td>
+                            <td style="padding-left: 50px;" ><index_regular>Security Question</index_regular></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p:inputText id="address2" value="#{accountManager.address2}" label="Address Line 2" styleClass="accountInputTextField">
+                                </p:inputText>
+                            </td>
 
-                        <h:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Password *" for="password" />
-                        <p:password id="password" value="#{accountManager.password}" feedback="true" required="true" styleClass="accountInputTextField">
-                            <!-- Execute the "validate" method in the "PasswordValidator.java" class file to validate the password entered. -->
-                        </p:password>
+                            <td style="padding-left: 50px;">
+                                <h:selectOneMenu id="securityQuestion" style="width: 228px; height: 30px; border-radius: 3px;" label="Security Questions"
+                                                 value="#{accountManager.securityQuestion}" required="true" >
+                                    <f:selectItems value="#{accountManager.security_questions}"/>
+                                </h:selectOneMenu>
+                            </td>
+                        </tr>
 
-                        <h:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Confirm Password: *" for="confirmPassword" />
-                        <p:password id="confirmPassword" value="ToBeReadFromThisFieldByAccountManager" required="true" styleClass="accountInputTextField"/>
+                        <tr>
+                            <td><index_regular>City</index_regular></td>
+                            <td style="padding-left: 50px;" ><index_regular>Security Answer</index_regular></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p:inputText id="city" value="#{accountManager.city}" required="true" styleClass="accountInputTextField"
+                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_city}" label="City">
+                                    <f:validateLength minimum="2" />
+                                </p:inputText>
+                            </td>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Security Question" for="securityQuestion" />
-                        <p:selectOneMenu id="securityQuestion" label="Security Questions"
-                                         value="#{accountManager.securityQuestion}" required="true" >
-                            <f:selectItems value="#{accountManager.security_questions}"/>
-                        </p:selectOneMenu>
+                            <td style="padding-left: 50px;">
+                                <p:inputText id="securityAnswer" value="#{accountManager.securityAnswer}" required="true" styleClass="accountInputTextField"
+                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_securityAnswer}" label="Security Answer">
+                                    <f:validateLength minimum="2" />
+                                </p:inputText>
+                            </td>
+                        </tr>
 
-                        <p:outputLabel style="font-family: Lato; font-size: 15px; font-weight:bold;" value="Security Answer" for="securityAnswer" />
-                        <p:inputText id="securityAnswer" value="#{accountManager.securityAnswer}" required="true" styleClass="accountInputTextField"
-                                     requiredMessage="#{bundle.CreateCustomerRequiredMessage_securityAnswer}" label="Security Answer">
-                            <f:validateLength minimum="2" />
-                        </p:inputText>
-                    </p:panelGrid>
+                        <tr>
+                            <td><index_regular>State</index_regular></td>
+
+                        </tr>
+                        <tr>
+                            <td>
+                                <h:selectOneMenu id="state" style="width: 228px; height: 30px; border-radius: 3px;" value="#{accountManager.state}" required="true">
+                                    <f:selectItems value="#{accountManager.listOfStates}" var="state"
+                                                   itemLabel="#{state}" itemValue="#{state}" />
+                                </h:selectOneMenu> 
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td><index_regular>Zip Code</index_regular></td>
+
+                        </tr>
+                        <tr>
+                            <td>
+                                <p:inputText id="zipcode" value="#{accountManager.zipcode}" required="true" styleClass="accountInputTextField"
+                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_zipcode}" label="Zip Code">
+
+                                </p:inputText> 
+                            </td>
+                        </tr>
+                    </table>
                     <p:spacer height="20px"/>
                     <div align="center">
-                        <p:commandButton style="display:inline;font-size: 15px;padding: 4px 10px;" id="submit" value="Submit" action="#{accountManager.createAccount()}" ajax="false" icon="ui-icon-extlink" />
+                        <p:commandButton class="login" style="display:inline" id="submit" value="Submit" action="#{accountManager.createAccount()}" ajax="false"/>
                         <p:spacer width="10px"/>
-                        <p:button style="display:inline" outcome="index" value="Cancel" icon="ui-icon-cancel"></p:button>
+                        <p:commandButton class="login" style="display:inline" action="index?faces-redirect=true" value="Cancel" ajax="false"/>
                     </div>
+                    <br/>
+                    <br/>
                 </h:form>
-                <p:spacer height="40px"/>
             </div>
         </ui:define>
 
