Added Calendar Page and Basic Updates

--- a/web/SignIn.xhtml
+++ b/web/SignIn.xhtml
@@ -55,10 +55,11 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                     </table>
                     <br/>
                     <p:commandButton id="login" value="Sign In" action="#{loginManager.loginUser()}" 
-                                     class="login" ajax="false" icon="ui-icon-arrowthick-1-e" />
+                                     class="login" ajax="false"/>
                     <br/>
                     <br/>
                 </h:form>
+                
             </div>
             <br /><br />
 
