Fixed Signup page

--- a/web/SignUp.xhtml
+++ b/web/SignUp.xhtml
@@ -24,7 +24,7 @@ Copyright © 2017 Osman Balci. All rights reserved.
         <ui:define name="editableContent">
             <div align="center"> <index_header>Create Account</index_header></div>
             <br/>
-            <div align="center" style="width:40%; background-color: #FEFEFE; margin:0 auto;" >
+            <div align="center" style="width:600px; background-color: #FEFEFE; margin:0 auto;" >
 
                 <!-- Error messages will be shown here if any  -->
                 <p:messages id="msgs" showIcon="false"/>
