--- a/web/CheckWeather.xhtml
+++ b/web/CheckWeather.xhtml
@@ -38,7 +38,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
             <p:growl id="growl" life="7000"/>
             <div align="center"><index_header>Check Weather For Your Event</index_header></div>
             <br/>
-            <div align="center" style="width:40%; background-color: #FEFEFE; margin:0 auto;">
+            <div align="center" style="width:500px; background-color: #FEFEFE; margin:0 auto;">
                 <h:form prependId="false">
                     <br/>
                     <table cellspacing="10">
