--- a/web/SignIn.xhtml
+++ b/web/SignIn.xhtml
@@ -20,7 +20,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
             <div align="center"> <index_header>Log In</index_header></div>
             <br></br>
 
-            <div align="center" style="width:40%; background-color: #FEFEFE; margin:0 auto;">
+            <div align="center" style="width:500px; background-color: #FEFEFE; margin:0 auto;">
                 <h:form>
                     <br/>
                     <table cellspacing="10">
