--- a/web/CreateEvent.xhtml
+++ b/web/CreateEvent.xhtml
@@ -93,7 +93,8 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         </h:inputText>
                     </div>
                     <br/>
-                    <p:commandButton id="check" class="login" value="CREATE" action="#{userEventsController.addEvent()}" ajax="false"/>
+                    <p:commandButton id="check" class="login" value="CREATE" actionListener="#{userEventsController.addEvent}" 
+                                     ajax="false"  />
 
                     <br/>
                 </h:form>
