Events instantly displayed on Calendar

--- a/web/CreateEvent.xhtml
+++ b/web/CreateEvent.xhtml
@@ -94,7 +94,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                     </div>
                     <br/>
                     <p:commandButton id="check" class="login" value="CREATE" actionListener="#{userEventsController.addEvent}" 
-                                     ajax="false"  />
+                                     action="#{scheduleView.init}" ajax="false"  />
 
                     <br/>
                 </h:form>
