--- a/web/CreateEvent.xhtml
+++ b/web/CreateEvent.xhtml
@@ -123,8 +123,10 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         </h:inputText>
                     </div>
                     <br/>
-                    <p:commandButton id="check" class="login" value="CREATE" actionListener="#{userEventsController.addEvent}" 
-                                     action="#{scheduleView.init}" ajax="false"  />
+                    <p:commandButton id="check" class="login" value="CREATE" action="#{userEventsController.addEvent}"
+                                     >
+
+                    </p:commandButton>
 
                     <br/>
                 </h:form>
