--- a/web/Planner.xhtml
+++ b/web/Planner.xhtml
@@ -22,8 +22,8 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
             <h:form id="PlannerDataForm">
                 <h:panelGrid columns="1" columnClasses="weatherResults">
                     <p:schedule id="monthCal" value="#{scheduleView.eventModel}" styleClass="monthCal" draggable="false"
-                                timeFormat="h:mmt" rightHeaderTemplate="" >
-                        <p:ajax event="eventSelect" listener="#{scheduleView.onEventSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
+                                timeFormat="h:mmt" rightHeaderTemplate="" timeZone="GMT-4">
+                        <p:ajax event="eventSelect" listener="#{scheduleView.onEventSelect}"/>
                         <p:ajax event="dateSelect" listener="#{scheduleView.onDateSelect}" update="createEvent" oncomplete="PF('createEventDialog').show();" />
                     </p:schedule>
 
@@ -31,25 +31,6 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                     <p:spacer style="height: 10px;"/>
                 </h:panelGrid>
 
-                <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="clip" hideEffect="clip">
-                    <h:panelGrid id="eventDetails" columns="2">
-                        <p:outputLabel for="title" value="Titles:" />
-                        <p:inputText id="title" value="#{scheduleView.event.title}" required="true" />
-
-                        <p:outputLabel for="from" value="From:" />
-                        <p:calendar id="from" value="#{scheduleView.event.startDate}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
-
-                        <p:outputLabel for="to" value="To:" />
-                        <p:calendar id="to" value="#{scheduleView.event.endDate}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
-
-                        <p:outputLabel for="allDay" value="All Day:" />
-                        <h:selectBooleanCheckbox id="allDay" value="#{scheduleView.event.allDay}" />
-
-                        <p:commandButton type="reset" value="Reset" />
-                        <p:commandButton id="addButton" value="Save" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
-                    </h:panelGrid>
-
-                </p:dialog>
             </h:form>
 
             <ui:include src="CreateEvent.xhtml"/> 
