--- a/web/UserHomePage.xhtml
+++ b/web/UserHomePage.xhtml
@@ -84,7 +84,18 @@ Copyright © 2017 Osman Balci. All rights reserved.
                     </f:facet>
 
                     <p:carousel value="#{searchedWeatherController.result.alerts}" headerText="Alerts" var="item" itemStyle="text-align:center" responsive="true" style="font-size: 18px" numVisible="5" >
-                        <h:outputText value="#{item.description}"/>
+                        <p:panelGrid columns="2" style="width:100%;margin:10px 0px;" columnClasses="weatherResults,weatherResults" layout="grid" styleClass="ui-panelgrid-blank">
+
+                            <h:outputText value="Summary:" />
+                            <h:outputText value="#{item.description}"/>
+
+                            <h:outputText value="Severity:" />
+                            <h:outputText value="#{item.severity}"/>
+
+                            <h:outputText value="Source:" />
+                            <h:outputText value="#{item.uri}"/>
+
+                        </p:panelGrid>
                     </p:carousel>
                 </p:panelGrid>
             </div>
